--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,8 +22,8 @@ jobs:
       - name: Build EXE
         run: pyinstaller --onefile --clean test3.py
 
-      - name: Upload EXE
+      - name: Upload Result
         uses: actions/upload-artifact@v4
         with:
-          name: windows-bot-exe
+          name: windows-exec
           path: dist/test3.exe
