--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,29 +1,27 @@
 name: Build Windows EXE
+
 on: [push]
 
 jobs:
   build:
     runs-on: windows-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install playwright pyinstaller
           playwright install chromium
 
       - name: Build EXE
-        run: pyinstaller --onefile --clean test3.py
+        run: pyinstaller --onefile test3.py
 
       - name: Upload Result
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
           name: windows-exec
           path: dist/test3.exe
