--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: Build Windows EXE
+name: Build Bot EXE
 
 on:
   push:
@@ -19,20 +19,18 @@ jobs:
           python-version: '3.10'
           cache: 'pip'
 
-      - name: Install dependencies
+      - name: Install Build Tools
         run: |
           python -m pip install --upgrade pip
           pip install playwright pyinstaller
-          # We don't need to 'playwright install' here because 
-          # the EXE will do it on the user's machine.
 
-      - name: Build EXE
-        # --collect-all playwright is the secret sauce that lets the EXE
-        # run 'playwright install' commands on the target machine.
-        run: pyinstaller --onefile --clean --hidden-import playwright --collect-all playwright test3.py
+      - name: Build Single EXE
+        # --name: the final filename
+        # --collect-all: bundles the playwright drivers into the EXE
+        run: pyinstaller --onefile --clean --name "Botas5_Pro" --collect-all playwright botas5.py
 
-      - name: Upload Result
+      - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: windows-bot-exe
-          path: dist/test3.exe
+          name: TravianBot
+          path: dist/Botas5_Pro.exe
