--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: Build Bot EXE
+name: Build Installer and Bot
 
 on:
   push:
@@ -19,18 +19,21 @@ jobs:
           python-version: '3.10'
           cache: 'pip'
 
-      - name: Install Build Tools
+      - name: Install Build Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install playwright pyinstaller
 
-      - name: Build Single EXE
-        # --name: the final filename
-        # --collect-all: bundles the playwright drivers into the EXE
-        run: pyinstaller --onefile --clean --name "Botas5_Pro" --collect-all playwright botas5.py
+      - name: Build Installer EXE
+        # This converts your install.py into an EXE 
+        run: pyinstaller --onefile --clean --name "Setup_Browsers" install.py
 
-      - name: Upload Artifact
+      - name: Build Bot EXE
+        # This converts test3.py into the bot EXE
+        run: pyinstaller --onefile --clean --name "Botas5_Bot" --collect-all playwright test3.py
+
+      - name: Upload Both EXEs
         uses: actions/upload-artifact@v4
         with:
-          name: TravianBot
-          path: dist/Botas5_Pro.exe
+          name: Travian_Bot_Package
+          path: dist/*.exe
